Possible support for H100 topo file

--- a/job.yaml
+++ b/job.yaml
@@ -1,7 +1,9 @@
 type: command
+code: src
 command: "all_reduce_perf -e 8G -f 2 -g 1"
 environment: azureml:nccltest_wrapper:1
 environment_variables:
+  NCCL_TOPO_FILE: ndv5-topo.xml
   NCCL_DEBUG: "INFO" # Helps debug setup issues
   NCCL_IB_PCI_RELAXED_ORDERING: "1" # Relaxed Ordering can greatly help the performance of Infiniband networks in virtualized environments.
 compute: azureml:kube-compute
